Refactored to separate content from overlay to add restartButton and fixed autospacing

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -64,6 +64,10 @@
     -fx-fill: yellow-0-tr-2;
 }
 
+.content-section {
+    -fx-padding: 16px;
+}
+
 .game-board-section {
     -fx-spacing: 48px;
 }
@@ -119,7 +123,7 @@
     -fx-text-fill: gray-0;
     -fx-background-color: transparent;
     -fx-border-color: transparent;
-    -fx-padding: 0;
+    -fx-padding: 4;
 }
 
 .scroll-pane {
@@ -154,4 +158,10 @@
     -fx-padding: 0px 16px;
     -fx-text-fill: magenta-5;
     -fx-effect: dropshadow(gaussian, magenta-4-tr, 2, 0, 0, 2);
+}
+
+.icon-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-effect: none;
 }
